unpackaged/main/default/objects/Customer_Complaint__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Complaints</relationshipLabel>
    <relationshipName>Customer_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>