unpackaged/main/default/objects/Customer_Complaint__c/fields/Business_Contact_Emails__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact_Emails__c</fullName>
    <label>Business Contact Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>