unpackaged/main/default/objects/Customer_Complaint__c/fields/Complainant_City__c.field-meta.xml
<CustomField>
    <fullName>Complainant_City__c</fullName>
    <label>Complainant City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>