unpackaged/main/default/objects/Customer_Complaint__c/fields/Complainant_Desired_Solution__c.field-meta.xml
<CustomField>
    <fullName>Complainant_Desired_Solution__c</fullName>
    <label>Complainant’s Desired Solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>