unpackaged/main/default/objects/Customer_Complaint__c/fields/Complainant_Email__c.field-meta.xml
<CustomField>
    <fullName>Complainant_Email__c</fullName>
    <label>Complainant Email</label>
    <type>Email</type>
</CustomField>