unpackaged/main/default/objects/Customer_Complaint__c/fields/Complainant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Complainant_First_Name__c</fullName>
    <label>Complainant First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>