unpackaged/main/default/objects/Customer_Complaint__c/fields/Complainant_Street__c.field-meta.xml
<CustomField>
    <fullName>Complainant_Street__c</fullName>
    <label>Complainant Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>