unpackaged/main/default/objects/Customer_Complaint__c/fields/Complainant_Zip__c.field-meta.xml
<CustomField>
    <fullName>Complainant_Zip__c</fullName>
    <label>Complainant Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>