unpackaged/main/default/objects/Customer_Complaint__c/fields/Complaint_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Closed_Date__c</fullName>
    <label>Complaint Closed Date</label>
    <type>Date</type>
</CustomField>