unpackaged/main/default/objects/Customer_Complaint__c/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>PD-3058</description>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>