unpackaged/main/default/objects/Customer_Complaint__c/fields/Last_Activity_Notes__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Notes__c</fullName>
    <description>PD-3058</description>
    <label>Last Activity Notes</label>
    <type>TextArea</type>
</CustomField>