unpackaged/main/default/objects/Customer_Complaint__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Customer Complaints</relationshipLabel>
    <relationshipName>Customer_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>