unpackaged/main/default/objects/Customer_Complaint__c/fields/Moneyjet_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Moneyjet_Complaint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE = Moneyjet related Complaint (PD-3058)</description>
    <inlineHelpText>TRUE = Moneyjet related Complaint</inlineHelpText>
    <label>Moneyjet Complaint</label>
    <type>Checkbox</type>
</CustomField>