unpackaged/main/default/objects/Customer_Complaint__c/fields/Number_of_Business_Days_to_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Business_Days_to_Resolve__c</fullName>
    <formula>ABS(

CASE(MOD (Complaint_Received_Date__c - DATE(1985,6,24),7),
0 , CASE( MOD( Complaint_Closed_Date__c  - Complaint_Received_Date__c, 7),1,2,2,3,3,4,4,5,5,5,6,5,1)
,
1 , CASE( MOD( Complaint_Closed_Date__c - Complaint_Received_Date__c
,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Complaint_Closed_Date__c - Complaint_Received_Date__c
,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Complaint_Closed_Date__c - Complaint_Received_Date__c
,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Complaint_Closed_Date__c - Complaint_Received_Date__c
,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Complaint_Closed_Date__c - Complaint_Received_Date__c
,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Complaint_Closed_Date__c - Complaint_Received_Date__c
,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(((Complaint_Closed_Date__c) - ( Complaint_Received_Date__c) )/7)*5) +

( Complaint_Closed_Date__c - Complaint_Received_Date__c) - ((Complaint_Closed_Date__c) -
Complaint_Received_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Business Days to Resolve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>