unpackaged/main/default/objects/Customer_Complaint__c/fields/Personal_Guarantor_1__c.field-meta.xml
<CustomField>
    <fullName>Personal_Guarantor_1__c</fullName>
    <label>Personal Guarantor  #1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>