unpackaged/main/default/objects/Customer_Complaint__c/fields/Substantiated__c.field-meta.xml
<CustomField>
    <fullName>Substantiated__c</fullName>
    <label>Substantiated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>