unpackaged/main/default/objects/Customer_Complaint__c/fields/UDAAP_Regulation_Violation_Concern__c.field-meta.xml
<CustomField>
    <fullName>UDAAP_Regulation_Violation_Concern__c</fullName>
    <label>UDAAP/Regulation Violation Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>